# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  make  package.yaml  projectile.ppm  raytracer.cabal  runbuild  runcmake  runtests  stack.yaml
app/Projectile/: Main.hs
apps/: sample.c
apps/clock/: main.c
apps/projectile/: main.c
apps/silhouette/: main.c
include/: README.md
include/raytracer/: CMakeLists.txt  canvas.c  canvas.h  color.c  color.h  intersection_list.c  intersection_list.h  intersections.c  intersections.h  matrix.c  matrix.h  matrix_transformations.c  matrix_transformations.h  ray.c  ray.h  raytracer_utils.c  raytracer_utils.h  sphere.c  sphere.h  tuple.c  tuple.h  types.h
include/rmath/: CMakeLists.txt  tuple.c  tuple.h  vector.c  vector.h
src/Raytracer/: Canvas.hs  Color.hs  FloatEq.hs  Matrix.hs  Rays.hs  Render.hs  Transformation.hs  Tuple.hs
test/: Canvas.hs  Spec.hs  Tuple.hs
test/Test/Raytracer/: Assertions.hs  Canvas.hs  Matrix.hs  Rays.hs  Transformation.hs  Tuple.hs
tests/: CMakeLists.txt  LICENSE  bdd_tap.h
tests/canvas_suite/: CMakeLists.txt  canvas_test.c  colors_test.c
tests/matrix_suite/: CMakeLists.txt  matrix_test.c  matrix_transform_test.c
tests/ray_sphere_suite/: CMakeLists.txt  intersections_test.c  rays_test.c  spheres_test.c
tests/tuples_suite/: CMakeLists.txt  canvas_test.c  point_test.c  tuple_arithmetic_test.c  vector_test.c
